--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream php-fpm {
 server {
     listen 80;
     root /API/public;
-    index index.html index.php index.phtml index.htm index.nginx-debian.html;
+    index index.php index.phtml index.html index.htm index.nginx-debian.html;
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
